--- a/views/thank_you.ejs
+++ b/views/thank_you.ejs
@@ -8,6 +8,11 @@
             </div>
             <div class="card-body">
                 <p class="h6 text-center text-secondary">Your response has been submitted</p>
+                <div class="d-flex justify-content-center">
+                    <a href="/" class="btn btn-sm btn-success">
+                        Go Home &nbsp; <svg style="height: 1.5rem; width: 1.rem" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
